# beetemplate

./: CMakeLists.txt  LICENSE  README.md
cmake/: cpm.cmake
plugin/: CMakeLists.txt
test/: CMakeLists.txt
test/source/: AudioProcessorTest.cpp
